@startuml

title __MATCHERS's Class Diagram__\n

  namespace yhames.pro.project.afis {
    namespace matchers {
      class yhames.pro.project.afis.matchers.Match {
          - isMatch : boolean
          - score : double
          + Match()
          + Match()
          + Match()
          + getFingerprint()
          + getScore()
          + isMatch()
          + setFingerprint()
          + setMatch()
          + setScore()
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace matchers {
      abstract class yhames.pro.project.afis.matchers.Matcher {
          ~ threshold : float
          {abstract} + match()
          {abstract} + search()
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace matchers {
      class yhames.pro.project.afis.matchers.SourceAFIS {
          {static} - threshold : float
          + match()
          + search()
          {static} - convertFingerprintToTemplate()
      }
    }
  }
  

  yhames.pro.project.afis.matchers.Match o-- yhames.pro.project.afis.Fingerprint : fingerprint
  yhames.pro.project.afis.matchers.SourceAFIS -up-|> yhames.pro.project.afis.matchers.Matcher


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
